--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
                 <img src="img/Logo.png" alt="Logo">
             </div>
             <div class="header__right">
-                <nav class="nav header-nav">
+                <nav class="header-nav">
                     <ul class="header-nav__list list-reset">
                         <li class="header-nav__item"><a href="#" class="header-nav__link">My Account</a></li><hr class="header-hr">
-                        <li class="header-nav__item"><a href="#" class="header-nav__link">Whishlist</a></li><hr class="header-hr">
+                        <li class="header-nav__item"><a href="#" class="header-nav__link">Wishlist</a></li><hr class="header-hr">
                         <li class="header-nav__item"><a href="#" class="header-nav__link">My Cart</a></li><hr class="header-hr">
                         <li class="header-nav__item"><a href="#" class="header-nav__link">Checkout</a></li><hr class="header-hr">
                         <li class="header-nav__item"><a href="#" class="header-nav__link">Login</a></li>
@@ -44,19 +44,19 @@
         </div>
     </div><!-- header -->
 
-    <div class="navbar">
-        <div class="container">
-            <div class="toogle">
-                <a href="#" class="toogle__link">categories</a>
+    <div class="nav">
+        <div class="container nav-container">
+            <div class="toggle">
+                <a href="#" class="toggle__link">categories</a>
             </div>
-            <div class="nav__list">
+            <nav class="nav__list">
                 <div class="nav__item"><a href="#" class="nav__link">clothing</a></div>
                 <div class="nav__item"><a href="#" class="nav__link">electronics hot</a></div>
                 <div class="nav__item"><a href="#" class="nav__link">health & beauty</a></div>
                 <div class="nav__item"><a href="#" class="nav__link">watches</a></div>
                 <div class="nav__item"><a href="#" class="nav__link">jewellery</a></div>
                 <div class="nav__item"><a href="#" class="nav__link">shoes</a></div>
-            </div>
+            </nav>
         </div>
     </div><!-- navbar -->
 
