--- a/index.html
+++ b/index.html
@@ -159,6 +159,8 @@
                         <input type="text">
                         <button class="subscribe-btn">subscribe</button>
                     </div>
+
+                    <div class="ads"><a href="#"><img src="/img/Sidebar/3.png" alt="image"></img></a></div>
     
                 </div><!-- sidebar__items -->
             </aside>
@@ -298,10 +300,85 @@
                         </div>
                     </div>
 
+                    <div class="post post6">
+                        <div class="post__title">
+                            <h2>featured products</h2>
+                            <nav class="right">
+                                <button class="prev-btn"><img src="img/prev.png" alt="prev"></button>
+                                <button class="next-btn"><img src="img/next.png" alt="next"></button>
+                            </nav>
+                        </div>
+                        <div class="post__content">
+                            <div class="item">
+                                <div class="post__img">
+                                    <img src="/img/section/post6/1.png" alt="image" class="img">
+                                </div>
+                                <div class="post__descr">
+                                    <p class="descr">Lorem ipsum dolor</p>
+                                    <p class="price"><s>$100.00</s><span class="bold">$90.00</span></p>
+                                    <div class="rating"><img src="img/rating.png" alt="stars"></div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="post__img">
+                                    <img src="/img/section/post6/2.png" alt="image" class="img">
+                                </div>
+                                <div class="post__descr">
+                                    <p class="descr">Lorem ipsum dolor</p>
+                                    <p class="price"><s>$100.00</s><span class="bold">$90.00</span></p>
+                                    <div class="rating"><img src="img/rating.png" alt="stars"></div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="post__img">
+                                    <img src="/img/section/post6/3.png" alt="image" class="img">
+                                </div>
+                                <div class="post__descr">
+                                    <p class="descr">Lorem ipsum dolor</p>
+                                    <p class="price"><s>$100.00</s><span class="bold">$90.00</span></p>
+                                    <div class="rating"><img src="img/rating.png" alt="stars"></div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="post__img">
+                                    <img src="/img/section/post6/4.png" alt="image" class="img">
+                                </div>
+                                <div class="post__descr">
+                                    <p class="descr">Lorem ipsum dolor</p>
+                                    <p class="price"><s>$100.00</s><span class="bold">$90.00</span></p>
+                                    <div class="rating"><img src="img/rating.png" alt="stars"></div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="post__img">
+                                    <img src="/img/section/post6/5.png" alt="image" class="img">
+                                </div>
+                                <div class="post__descr">
+                                    <p class="descr">Lorem ipsum dolor</p>
+                                    <p class="price"><s>$100.00</s><span class="bold">$90.00</span></p>
+                                    <div class="rating"><img src="img/rating.png" alt="stars"></div>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <div class="post__img">
+                                    <img src="/img/section/post6/6.png" alt="image" class="img">
+                                </div>
+                                <div class="post__descr">
+                                    <p class="descr">Lorem ipsum dolor</p>
+                                    <p class="price"><s>$100.00</s><span class="bold">$90.00</span></p>
+                                    <div class="rating"><img src="img/rating.png" alt="stars"></div>
+                                </div>
+                            </div>
+                        </div><!-- post__content -->
+                    </div><!-- post6 -->
+
                 </div><!-- article -->
             </div><!-- article-block -->
 
         </div><!-- content__container -->
     </section><!-- content -->
+    <section class="brand">
+        <div class="container brand__container"><img src="/img/brand.png" alt="brands"></div>
+    </section>
 </body>
 </html>  
